WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162137
AX: voiceover does not read contents of input role="spinbutton"
https://bugs.webkit.org/show_bug.cgi?id=162137
Summary
AX: voiceover does not read contents of input role="spinbutton"
jeanne.waldman
Reported
2016-09-18 07:51:12 PDT
<input type="text" role="spinbutton" value="5"/> the value doesn't get read when you tap on it in voiceover mode. <input type=text" value="5"/> does. Go to
https://jqueryui.com/spinner/
and you see that the input can get focus, but the number in the input doesn't get read when you focus to it in voiceover mode. related bug
Bug 145514
- AX: input role="spinbutton" gets skipped in voiceover
Attachments
iOS patch
(4.05 KB, patch)
2016-09-20 12:42 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-09-18 07:51:23 PDT
<
rdar://problem/28355606
>
chris fleizach
Comment 2
2016-09-18 15:02:27 PDT
(In reply to
comment #0
)
> <input type="text" role="spinbutton" value="5"/> the value doesn't get read > when you tap on it in voiceover mode. > <input type=text" value="5"/> does. > > Go to
https://jqueryui.com/spinner/
and you see that the input can get > focus, but the number in the input doesn't get read when you focus to it in > voiceover mode. > > related bug >
Bug 145514
- AX: input role="spinbutton" gets skipped in voiceover
From
https://www.w3.org/WAI/GL/wiki/Using_WAI-ARIA_range_attributes_for_range_widgets_such_as_progressbar,_scrollbar,_slider,_and_spinbutton#Example_1:_A_spinbutton
A widget with role spinbutton lets a user enter a value from within a given range. The spinbutton shows the current value and presents controls to allow the user to increase and decrease the value. The maximum and minimum values are represented by aria-valuemax, aria-valuemin, and the current value by aria-valuenow. ------------- If you used aria-valuenow it looks like this works. the value is being returned in this case
jeanne.waldman
Comment 3
2016-09-20 09:03:08 PDT
It is using aria-valuenow and it doesn't read the value in voiceover. <input id="spinner" name="spinner" value="5.06" aria-valuenow="5.06" autocomplete="off" class="ui-spinner-input" role="spinbutton">
jeanne.waldman
Comment 4
2016-09-20 09:03:43 PDT
https://jqueryui.com/resources/demos/spinner/decimal.html
chris fleizach
Comment 5
2016-09-20 09:10:59 PDT
(In reply to
comment #4
)
>
https://jqueryui.com/resources/demos/spinner/decimal.html
Is this macOS only?
jeanne.waldman
Comment 6
2016-09-20 09:23:34 PDT
iphone ios 9.3.5
chris fleizach
Comment 7
2016-09-20 09:27:42 PDT
(In reply to
comment #6
)
> iphone ios 9.3.5
ok, will also broken in macOS
Nan Wang
Comment 8
2016-09-20 12:42:03 PDT
Created
attachment 289392
[details]
iOS patch iOS patch
WebKit Commit Bot
Comment 9
2016-09-20 13:46:40 PDT
Comment on
attachment 289392
[details]
iOS patch Clearing flags on attachment: 289392 Committed
r206170
: <
http://trac.webkit.org/changeset/206170
>
WebKit Commit Bot
Comment 10
2016-09-20 13:46:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug