AX: voiceover does not read contents of input role="spinbutton" https://bugs.webkit.org/show_bug.cgi?id=162137

Reviewed by Chris Fleizach.

Source/WebCore:

The aria-valuenow attribute value on the spinbutton is not exposed
on iOS. We should expose aria-valuenow attribute for range controls
based on https://www.w3.org/TR/wai-aria/states_and_properties#aria-valuenow

Changes are covered in the modified test.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityValue]):

LayoutTests:

* accessibility/ios-simulator/spinbutton-expected.txt:
* accessibility/ios-simulator/spinbutton.html:


Canonical link: https://commits.webkit.org/180322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206170 268f45cc-cd09-0410-ab3c-d52691b4dbfc